assets/app.css
/*<--------------------------------------------Colors>*/
/*#95ebe0 - light blue
#29d4bd - darker blue
#36454f - main text
#a9bbc6 - light text
#F3F5F6 - light grey*/
/*<///-----------------------------------------Colors>*/

/*<--------------------------------------------Font>*/
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap');

body {
    font-family: 'Lato', sans-serif;
}
/*<///-----------------------------------------Font>*/

/*<--------------------------------------------General>*/
/*<---------------------------General - Sections>*/
.background-grey {
    width: 100%;
    background-color: #F3F5F6;
    padding: 0;
}

.background-white {
    width: 100%;
    background-color: #fafafa;
    padding: 0;
}

.container-section {
    width: 90%;
    margin: 0 auto;
}

.container-section-no-padding {
    padding: 0;
}

.content-bubble {
    border: solid 2px #29d4bd;
    background-color: #fff;
    border-radius: 25px;
    text-align: center;
}

.content-bubble-new-post {
    border: solid 3px #29d4bd;
}

.content-bubble-no-border {
    border: none;
    background-color: #fff;
    border-radius: 25px;
    text-align: center;
}

.content-bubble-grey-border {
    border: rgb(169,187,198,0.25) solid 0.5px;
    background-color: #fff;
    border-radius: 25px;
    text-align: center;
}

.content-bubble-text {
    color: #36454f;
    font-size: 1.1em;
    letter-spacing: 0.5px;
    font-weight: 300;
    padding: 0.75em;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    font-family: 'Raleway', sans-serif;
}

.img-container-circle-sm {
    height: 175px;
    width: 175px;
    border-radius: 50%;
    margin: 0 auto;
}

.img-container-circle-md {
    height: 280px;
    width: 280px;
    border-radius: 50%;
    margin: 0 auto;
}

.img-container-circle-lg {
    height: 350px;
    width: 350px;
    border-radius: 50%;
    margin: 0 auto;
}

.img-container-box-lg {
    height: 500px;
    width: 100%;
    border-radius: 25px;
    margin: 0 auto;
}

/*----------Sections - MQs*/
@media (max-width: 576px) {
    .img-container-circle-lg {
        height: 300px;
        width: 300px;
    }

    .img-container-box-lg {
        height: 400px;
    }
}

@media (min-width: 768px) {
    .container-section-grow-md {
        width: 95%;
    }
}

@media (min-width: 992px) {
    .container-section-shrink-lg {
        width: 85%;
    }
}
/*<///------------------------General - Sections>*/

/*<---------------------------General - Scrollbar>*/
::-webkit-scrollbar {
    width: 12px;
}

::-webkit-scrollbar-track {
    -webkit-border-radius: 10px;
    border-radius: 10px;
    background-color: #F3F5F6;
}
 
::-webkit-scrollbar-thumb {
    -webkit-border-radius: 10px;
    border-radius: 10px;
    background: rgba(206,212,218,0.8); 
}
/*<///------------------------General - Scrollbar>*/

/*<---------------------------General - Components>*/
.btn-outline-primary {
	border: none;
    background-color: #fff;
    border-radius: 25px;
    text-align: center;
    letter-spacing: 1.5px;
    text-transform: uppercase;
    color: #fff;
    background: #95ebe0;
    width: 150px;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.btn-outline-primary:hover {
    background: #29d4bd;
}

.btn-outline-primary-large {
	height: 64px;
    border-radius: 32px;
    font-size: 20px;
    letter-spacing: 1.5px;
    line-height: 48px;
}

.btn:focus {
    outline: none !important;
    box-shadow: none !important;
    background: #29d4bd !important;
}

.form-general-form {
    width: 100%;
    margin: 0 auto;
    padding: 1rem 0;
}

.form-control {
    border: solid 2px #95ebe0;
    letter-spacing: 1.5px;
    transition: none;
}

.form-control-message {
    height: 50vh;
}

.form-control:focus {
    border: solid 2.5px #29d4bd;
    box-shadow: none;
}

.form-control::-moz-placeholder {
  color: #a9bbc6;
  text-transform: uppercase;
}
.form-control:-ms-input-placeholder {
  color: #a9bbc6;
  text-transform: uppercase;
}
.form-control::-webkit-input-placeholder {
  color: #a9bbc6;
  text-transform: uppercase;
}

.form-button {
    text-align: center;
}

.form-button:hover {
    border: solid 2.5px #29d4bd;
}


/*----------Components - MQs*/
@media (min-width: 576px) {
    .form-general-form {
        width: 432px;
    }

    .form-control-message {
    height: 25vh;
    }    
}
/*<///------------------------General - Components>*/

/*<---------------------------General - Headings>*/
.h2-title-1 {
    color: #36454f;
    text-transform: uppercase;
    letter-spacing: 7px;
    text-align: center;
    font-size: 2.5em;
    font-weight: 500;
}

.h2-title-border {
    border-top: solid 2px #36454f;
    border-bottom: solid 2px #36454f;
    line-height: 60px;
}

.h3-title-1 {
    letter-spacing: 1.5px;
    text-transform: uppercase;
    font-size: 1.75em;
    font-weight: 300;
    padding: 0 0.5rem;
    color: #a9bbc6;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    text-align: center;
}

.h3-title-2 {
    letter-spacing: 1.5px;
    text-transform: uppercase;
    font-size: 1.75em;
    padding: 0 0.5rem;
    color: #36454f;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    text-align: center;
}

.h3-title-1-border {
    border-top: solid 0.5px #a9bbc6;
    border-bottom: solid 0.5px #a9bbc6;
    line-height: 40px;
}

.h3-title-2-border {
    border-top: solid 0.5px #36454f;
    border-bottom: solid 0.5px #36454f;
    line-height: 40px;
    font-weight: 300;
}
/* ... */

